// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_oneLine__67z97xd styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--whiteSpace__qabug41: nowrap; --_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_false__67z97x7"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__67z97xh styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_command__67z97x9"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8 styles_lines__67z97xa"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copiedText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_oneLine__67z97xd styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--whiteSpace__qabug41: nowrap; --_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_false__67z97x7"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__67z97xh styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copyText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_oneLine__67z97xd styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--whiteSpace__qabug41: nowrap; --_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_false__67z97x7"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__67z97xh styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with custom number of rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--_67z97x0: 12;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            />
          </pre>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with helper  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          aria-describedby="_r_36_"
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_36_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with hideText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__67z97xj"
          >
            <button
              aria-expanded="true"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Hide 
                <svg
                  aria-hidden="true"
                  class="styles_true__67z97xn uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with label  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <label
        class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
      >
        label
      </label>
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_default__17td3g90 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        >
          label
        </label>
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0M6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with noExpandable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_true__67z97x3 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__67z97x6 styles_multiline_true__67z97x8"
            />
          </pre>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with showText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="false"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__67z97xi"
          >
            <button
              aria-expanded="false"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Test 
                <svg
                  aria-hidden="true"
                  class="styles_false__67z97xm uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_oneLine__67z97xd styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--whiteSpace__qabug41: nowrap; --_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_false__67z97x7 styles_command__67z97x9"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__67z97xh styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_oneLine__67z97xd styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <pre
            class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
            style="--whiteSpace__qabug41: nowrap; --_67z97x0: 4;"
          >
            <span
              class="styles__67z97x6 styles_multiline_false__67z97x7 styles_lines__67z97xa"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__67z97xh styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > should click on extend button to display full content on  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      style="--_4k0ekn0: 100%;"
    >
      <div
        class="styles_multiline__67z97xc styles__67z97xb"
      >
        <div
          class="styles__67z97xe styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
        >
          <div
            class="styles__mlltm91"
            data-is-animated="true"
            style="--mlltm90: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__67z97x1 styles_noExpandable_false__67z97x2 styles_showMore_false__67z97x4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a"
              style="--_67z97x0: 4;"
            >
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__67z97x6 styles_multiline_true__67z97x8"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__67z97xg styles__67z97xf"
          >
            <div
              class="styles__1y5sygv5"
            >
              <button
                aria-label="Copy"
                class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__67z97xj"
          >
            <button
              aria-expanded="true"
              class="styles__67z97xk"
              type="button"
            >
              <span
                class="styles__67z97xl style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                Hide 
                <svg
                  aria-hidden="true"
                  class="styles_true__67z97xn uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
